@@ -79,7 +79,7 @@ function logEvent(event) {
 
 function CheckForUpdate(showdialog) {
 		$.ajax({
-			 url: "json.htm?type=command&param=checkforupdate",
+			 url: "json.htm?type=command&param=checkforupdate&forced=" + showdialog,
 			 async: false, 
 			 dataType: 'json',
 			 success: function(data) {
@@ -94,7 +94,7 @@ function CheckForUpdate(showdialog) {
 						}
 					}
 					else {
-						var noty2 = noty({text: 'A new version of Domoticz is Available!...<br>Use the Setup tab to update.'});
+						generate_noty('success', 'A new version of Domoticz is Available!...<br>Use the Setup tab to update.', false);
 					}
 				}
 				else
@@ -152,7 +152,6 @@ function TransferDevice(idx,backfunction)
 if (window.applicationCache) {
 	window.applicationCache.addEventListener('checking',logEvent,false);
 	window.applicationCache.addEventListener('noupdate',logEvent,false);
-	window.applicationCache.addEventListener('downloading',logEvent,false);
 	window.applicationCache.addEventListener('progress',logEvent,false);
 	window.applicationCache.addEventListener('cached',logEvent,false);
 	window.applicationCache.addEventListener('updateready',logEvent,false);
@@ -162,6 +161,10 @@ if (window.applicationCache) {
 
 $(document).ready(function() {
 		if (window.applicationCache) {
+			window.applicationCache.addEventListener('downloading', function(e)
+			{
+				generate_noty('information', '<b>Browser Cache is being refreshed...</b><br>Please standby...', 5000);
+			}, false);
 			window.applicationCache.addEventListener('updateready', function(e) 
 			{
 					if (window.applicationCache.status == window.applicationCache.UPDATEREADY) 
@@ -169,14 +172,11 @@ $(document).ready(function() {
 							// Browser downloaded a new app cache.
 							// Swap it in and reload the page to get the new hotness.
 							window.applicationCache.swapCache();
-							
-							if (confirm('A new version of the Application is available. Reload Now?')) 
-							{
-									window.location.reload();
-							}
+							window.location.reload();
 					}
 			}, false);
 		}
+		
 	$.myglobals = {
 		actlayout : "",
 		prevlayout : "",
@@ -252,31 +252,6 @@ $(document).ready(function() {
           }
     });
     
-$.noty.defaults = {
-	layout: 'topRight',
-	theme: 'defaultTheme',
-	type: 'success',
-	text: '',
-	dismissQueue: true, // If you want to use queue feature set this true
-	template: '<div class="noty_message"><span class="noty_text"></span><div class="noty_close"></div></div>',
-	animation: {
-		open: {height: 'toggle'},
-		close: {height: 'toggle'},
-		easing: 'swing',
-		speed: 500 // opening & closing animation speed
-	},
-	timeout: false, // delay for closing event. Set false for sticky notifications
-	force: false, // adds notification to the beginning of queue when set to true
-	modal: false,
-	closeWith: ['click'], // ['click', 'button', 'hover']
-	callback: {
-		onShow: function() {},
-		afterShow: function() {},
-		onClose: function() {},
-		afterClose: function() {}
-	},
-	buttons: false // an array of buttons
-};    
     CheckForUpdate(false);
 	
 		SwitchLayout(GetLayoutFromURL());
